@@ -178,7 +178,7 @@
                     <div class="banner-selection">
                         <div role="button" class="all-button selected">All</div>
                     </div>
-                    <div class="banner">
+                    <div class="banner beginner-banner">
                         <p class="beginner-title">Beginner</p>
                         <table class="js-beginner-banner-history banner-history">
                             <tr>
@@ -188,7 +188,7 @@
                             </tr>
                         </table>
                     </div>
-                    <div class="banner">
+                    <div class="banner event-banner">
                         <p class="beginner-title">Invitation From The Water</p>
                         <table class="js-event-banner-history banner-history">
                             <tr>
