@@ -1,3 +1,6 @@
+2023/01/10
+- Hide beginner and golden thread pulls if empty
+
 2023/01/09
 - Fixed aliEn T image
 - Fleshed out characters page
